@@ -48,6 +48,9 @@ BUG FIXES:
   initially (but will be saved if set), so make sure and select it if you need it 
   (Edit/Preferences/Autoplayer).  (OpenHoldem)
   
+- New variable originaldealposition added which remembers dealposition even when the user has folded
+  a hand. (Matrix)
+  
   
 MAINTENANCE:
 - Active and seated scraping now evaluates p first for efficiency.  (quiqsilver)
